[gd_scene load_steps=33 format=2]

[ext_resource path="res://Game Objects/Enemies/Bosses/woodeater_queen_larva/woodeater_queen_larva.gd" type="Script" id=1]
[ext_resource path="res://Game Objects/NonPlayerHitbox.gd" type="Script" id=2]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_idle.png" type="Texture" id=3]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_move.png" type="Texture" id=4]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_move_back.png" type="Texture" id=5]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_bite1.png" type="Texture" id=6]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_recov.png" type="Texture" id=7]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_jump.png" type="Texture" id=8]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_rise.png" type="Texture" id=9]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_in_air.png" type="Texture" id=10]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_fall.png" type="Texture" id=11]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_shock.png" type="Texture" id=12]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_get_stunned.png" type="Texture" id=13]
[ext_resource path="res://sprites/enemy sprites/woodeater_queen_larva_stunned.png" type="Texture" id=14]
[ext_resource path="res://Game Objects/Enemies/Bosses/woodeater_queen_larva/Default_State_Phase_1_Woodeater_Queen_Larva.gd" type="Script" id=15]
[ext_resource path="res://Game Objects/Enemies/Bosses/woodeater_queen_larva/Slam_State_Phase_1_Woodeater_Queen_Larva.gd" type="Script" id=16]
[ext_resource path="res://Game Objects/Enemies/Bosses/woodeater_queen_larva/Bite_State_Phase_1_Woodeater_Queen_Larva.gd" type="Script" id=17]
[ext_resource path="res://Game Objects/Enemies/Bosses/woodeater_queen_larva/Stun_State_Phase_1_Woodeater_Queen_Larva.gd" type="Script" id=18]

[sub_resource type="Animation" id=1]

resource_name = "bite"
length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Bite_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]

resource_name = "fall"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Fall_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Idle_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]

resource_name = "in_air"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Air_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]

resource_name = "jump"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Jump_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=6]

length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Move_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]

resource_name = "move_back"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Move_Back_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Recov_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=9]

resource_name = "rise"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rise_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=10]

resource_name = "shock"
length = 0.9
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Shock_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=11]

resource_name = "stun"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Stun_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]

resource_name = "twitch"
length = 0.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Twitch_Sprites:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=13]

custom_solver_bias = 0.0
extents = Vector2( 32.2295, 35.7999 )

[sub_resource type="RectangleShape2D" id=14]

custom_solver_bias = 0.0
extents = Vector2( 25.9979, 16.2963 )

[node name="woodeater_queen_larva" type="KinematicBody2D"]

input_pickable = false
collision_layer = 8
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]
max_hp = 30
damage = 10
spd = 50
jspd = 75
gravity = 250
tag = "enemy"
arange = 50
srange = Vector2( 0, 0 )
stun_threshold = 50

[node name="animator" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/bite = SubResource( 1 )
anims/fall = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/in_air = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/move = SubResource( 6 )
anims/move_back = SubResource( 7 )
anims/recov = SubResource( 8 )
anims/rise = SubResource( 9 )
anims/shock = SubResource( 10 )
anims/stun = SubResource( 11 )
anims/twitch = SubResource( 12 )
blend_times = [  ]

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( -30.7993, 28.9951, 1.99831, 29.0042, 17.5561, 28.1004, 24.1404, 12.3864, 28.2185, -1.77966, 22.6379, -9.29199, 18.3452, -27.7508, -3.76256, -38.0535, -11.9188, -26.6777, -17.2847, -16.8043, -19.6797, 2.06693, -22.8352, 9.00919, -27.0986, 14.9302, -32.0985, 23.3327 )

[node name="DamagePlayerArea" type="Area2D" parent="." index="2"]

editor/display_folded = true
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 16392
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamagePlayerArea" index="0"]

position = Vector2( -3, -4 )
shape = SubResource( 13 )
_sections_unfolded = [ "Transform" ]

[node name="BashHitbox" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 4096
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Collision" ]
susceptible = "bash"
vulnerable = "bash"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="BashHitbox" index="0"]

position = Vector2( -3, -4 )
shape = SubResource( 13 )
_sections_unfolded = [ "Transform" ]

[node name="SlashHitbox" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2048
collision_mask = 4
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 2 )
_sections_unfolded = [ "Collision" ]
susceptible = "slash"
vulnerable = "none"

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SlashHitbox" index="0"]

position = Vector2( 4, 23 )
shape = SubResource( 14 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="Idle_Sprites" type="Sprite" parent="." index="5"]

texture = ExtResource( 3 )
hframes = 4
_sections_unfolded = [ "Animation" ]

[node name="Move_Sprites" type="Sprite" parent="." index="6"]

visible = false
texture = ExtResource( 4 )
hframes = 4
frame = 3
_sections_unfolded = [ "Animation" ]

[node name="Move_Back_Sprites" type="Sprite" parent="." index="7"]

visible = false
texture = ExtResource( 5 )
hframes = 4
_sections_unfolded = [ "Animation" ]

[node name="Bite_Sprites" type="Sprite" parent="." index="8"]

visible = false
texture = ExtResource( 6 )
hframes = 3
_sections_unfolded = [ "Animation" ]

[node name="Recov_Sprites" type="Sprite" parent="." index="9"]

visible = false
texture = ExtResource( 7 )
hframes = 3
_sections_unfolded = [ "Animation" ]

[node name="Jump_Sprites" type="Sprite" parent="." index="10"]

visible = false
texture = ExtResource( 8 )
hframes = 4
frame = 3
_sections_unfolded = [ "Animation" ]

[node name="Rise_Sprites" type="Sprite" parent="." index="11"]

visible = false
texture = ExtResource( 9 )
hframes = 2
_sections_unfolded = [ "Animation" ]

[node name="Air_Sprites" type="Sprite" parent="." index="12"]

visible = false
texture = ExtResource( 10 )
_sections_unfolded = [ "Animation" ]

[node name="Fall_Sprites" type="Sprite" parent="." index="13"]

visible = false
texture = ExtResource( 11 )
_sections_unfolded = [ "Animation" ]

[node name="Shock_Sprites" type="Sprite" parent="." index="14"]

visible = false
texture = ExtResource( 12 )
hframes = 3
frame = 2
_sections_unfolded = [ "Animation" ]

[node name="Stun_Sprites" type="Sprite" parent="." index="15"]

visible = false
texture = ExtResource( 13 )
_sections_unfolded = [ "Animation" ]

[node name="Twitch_Sprites" type="Sprite" parent="." index="16"]

visible = false
position = Vector2( 0, 8 )
texture = ExtResource( 14 )
hframes = 2
_sections_unfolded = [ "Animation", "Transform", "Z Index" ]

[node name="PhaseOneStates" type="Node2D" parent="." index="17"]

editor/display_folded = true

[node name="UnburrowedSuperState" type="Node2D" parent="PhaseOneStates" index="0"]

[node name="Default" type="Node2D" parent="PhaseOneStates/UnburrowedSuperState" index="0"]

editor/display_folded = true
script = ExtResource( 15 )

[node name="MoveTimer" type="Timer" parent="PhaseOneStates/UnburrowedSuperState/Default" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Slam" type="Node2D" parent="PhaseOneStates/UnburrowedSuperState" index="1"]

editor/display_folded = true
script = ExtResource( 16 )

[node name="AttackTimer" type="Timer" parent="PhaseOneStates/UnburrowedSuperState/Slam" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Bite" type="Node2D" parent="PhaseOneStates/UnburrowedSuperState" index="2"]

editor/display_folded = true
script = ExtResource( 17 )

[node name="AttackTimer" type="Timer" parent="PhaseOneStates/UnburrowedSuperState/Bite" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Charge" type="Node2D" parent="PhaseOneStates/UnburrowedSuperState" index="3"]

[node name="Stun" type="Node2D" parent="PhaseOneStates/UnburrowedSuperState" index="4"]

script = ExtResource( 18 )

[node name="StunTimer" type="Timer" parent="PhaseOneStates/UnburrowedSuperState/Stun" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Transition" type="Node2D" parent="PhaseOneStates/UnburrowedSuperState" index="5"]

[node name="Shoot" type="Node2D" parent="PhaseOneStates/UnburrowedSuperState" index="6"]

[node name="Beam" type="Node2D" parent="PhaseOneStates/UnburrowedSuperState" index="7"]

[node name="BurrowedSuperState" type="Node2D" parent="PhaseOneStates" index="1"]

editor/display_folded = true

[node name="Default" type="Node2D" parent="PhaseOneStates/BurrowedSuperState" index="0"]

[node name="Slam" type="Node2D" parent="PhaseOneStates/BurrowedSuperState" index="1"]

[node name="Bite" type="Node2D" parent="PhaseOneStates/BurrowedSuperState" index="2"]

[node name="Charge" type="Node2D" parent="PhaseOneStates/BurrowedSuperState" index="3"]

[node name="Stun" type="Node2D" parent="PhaseOneStates/BurrowedSuperState" index="4"]

[node name="Transition" type="Node2D" parent="PhaseOneStates/BurrowedSuperState" index="5"]

[node name="Shoot" type="Node2D" parent="PhaseOneStates/BurrowedSuperState" index="6"]

[node name="Beam" type="Node2D" parent="PhaseOneStates/BurrowedSuperState" index="7"]

[node name="PhaseTwoStates" type="Node2D" parent="." index="18"]

editor/display_folded = true

[node name="UnburrowedSuperState" type="Node2D" parent="PhaseTwoStates" index="0"]

editor/display_folded = true

[node name="Default" type="Node2D" parent="PhaseTwoStates/UnburrowedSuperState" index="0"]

editor/display_folded = true
script = ExtResource( 15 )

[node name="MoveTimer" type="Timer" parent="PhaseTwoStates/UnburrowedSuperState/Default" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Slam" type="Node2D" parent="PhaseTwoStates/UnburrowedSuperState" index="1"]

[node name="Bite" type="Node2D" parent="PhaseTwoStates/UnburrowedSuperState" index="2"]

script = ExtResource( 17 )

[node name="AttackTimer" type="Timer" parent="PhaseTwoStates/UnburrowedSuperState/Bite" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Charge" type="Node2D" parent="PhaseTwoStates/UnburrowedSuperState" index="3"]

[node name="Stun" type="Node2D" parent="PhaseTwoStates/UnburrowedSuperState" index="4"]

[node name="Transition" type="Node2D" parent="PhaseTwoStates/UnburrowedSuperState" index="5"]

[node name="Shoot" type="Node2D" parent="PhaseTwoStates/UnburrowedSuperState" index="6"]

[node name="Beam" type="Node2D" parent="PhaseTwoStates/UnburrowedSuperState" index="7"]

[node name="BurrowedSuperState" type="Node2D" parent="PhaseTwoStates" index="1"]

editor/display_folded = true

[node name="Default" type="Node2D" parent="PhaseTwoStates/BurrowedSuperState" index="0"]

[node name="Slam" type="Node2D" parent="PhaseTwoStates/BurrowedSuperState" index="1"]

[node name="Bite" type="Node2D" parent="PhaseTwoStates/BurrowedSuperState" index="2"]

[node name="Charge" type="Node2D" parent="PhaseTwoStates/BurrowedSuperState" index="3"]

[node name="Stun" type="Node2D" parent="PhaseTwoStates/BurrowedSuperState" index="4"]

[node name="Transition" type="Node2D" parent="PhaseTwoStates/BurrowedSuperState" index="5"]

[node name="Shoot" type="Node2D" parent="PhaseTwoStates/BurrowedSuperState" index="6"]

[node name="Beam" type="Node2D" parent="PhaseTwoStates/BurrowedSuperState" index="7"]

[node name="PhaseThreeStates" type="Node2D" parent="." index="19"]

[node name="UnburrowedSuperState" type="Node2D" parent="PhaseThreeStates" index="0"]

editor/display_folded = true

[node name="Default" type="Node2D" parent="PhaseThreeStates/UnburrowedSuperState" index="0"]

editor/display_folded = true
script = ExtResource( 15 )

[node name="MoveTimer" type="Timer" parent="PhaseThreeStates/UnburrowedSuperState/Default" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Slam" type="Node2D" parent="PhaseThreeStates/UnburrowedSuperState" index="1"]

[node name="Bite" type="Node2D" parent="PhaseThreeStates/UnburrowedSuperState" index="2"]

script = ExtResource( 17 )

[node name="AttackTimer" type="Timer" parent="PhaseThreeStates/UnburrowedSuperState/Bite" index="0"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="Charge" type="Node2D" parent="PhaseThreeStates/UnburrowedSuperState" index="3"]

[node name="Stun" type="Node2D" parent="PhaseThreeStates/UnburrowedSuperState" index="4"]

[node name="Transition" type="Node2D" parent="PhaseThreeStates/UnburrowedSuperState" index="5"]

[node name="Shoot" type="Node2D" parent="PhaseThreeStates/UnburrowedSuperState" index="6"]

[node name="Beam" type="Node2D" parent="PhaseThreeStates/UnburrowedSuperState" index="7"]

[node name="BurrowedSuperState" type="Node2D" parent="PhaseThreeStates" index="1"]

[node name="Default" type="Node2D" parent="PhaseThreeStates/BurrowedSuperState" index="0"]

[node name="Slam" type="Node2D" parent="PhaseThreeStates/BurrowedSuperState" index="1"]

[node name="Bite" type="Node2D" parent="PhaseThreeStates/BurrowedSuperState" index="2"]

[node name="Charge" type="Node2D" parent="PhaseThreeStates/BurrowedSuperState" index="3"]

[node name="Stun" type="Node2D" parent="PhaseThreeStates/BurrowedSuperState" index="4"]

[node name="Transition" type="Node2D" parent="PhaseThreeStates/BurrowedSuperState" index="5"]

[node name="Shoot" type="Node2D" parent="PhaseThreeStates/BurrowedSuperState" index="6"]

[node name="Beam" type="Node2D" parent="PhaseThreeStates/BurrowedSuperState" index="7"]

[node name="ActionTimer" type="Timer" parent="." index="20"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[connection signal="timeout" from="PhaseOneStates/UnburrowedSuperState/Slam/AttackTimer" to="PhaseOneStates/UnburrowedSuperState/Slam" method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="PhaseOneStates/UnburrowedSuperState/Bite/AttackTimer" to="PhaseOneStates/UnburrowedSuperState/Bite" method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="PhaseOneStates/UnburrowedSuperState/Stun/StunTimer" to="PhaseOneStates/UnburrowedSuperState/Stun" method="_on_StunTimer_timeout"]

[connection signal="timeout" from="PhaseTwoStates/UnburrowedSuperState/Bite/AttackTimer" to="PhaseTwoStates/UnburrowedSuperState/Bite" method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="PhaseThreeStates/UnburrowedSuperState/Bite/AttackTimer" to="PhaseThreeStates/UnburrowedSuperState/Bite" method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]


